registation form done

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
 
         </div>
         <div class="right">
+         <div class="language">
+          <select>
+            <option>English(UK)</option>
+            <option>Bangla</option>
+          <option>Urdu</option>
+            <option>Hindi</option>
+          </select>
+         </div>
           <h1 class="resistation-title">Create Account</h1>
         <div class="sso">
           <div class="sign-in">
@@ -38,13 +46,16 @@
         </div>
         <form action="">
           <div class="form">
-          <input type="Text" placeholder=""/>
-          <input type="email"/>
-          <input type="password"/>
-          <button type="submit">Create Account</button>
-          </div>
 
+            <input type="text" placeholder="Full name" />
+            <input type="email" placeholder="Email Address" />
+            <input type="password" placeholder="Password" />
+            <button type="submit">Create Account</button>
+
+           
+          </div>
         </form>
+        <p class="nav-login">Already have an account? <a href="#">Log in </a></p>
       </div>
        
     </main>
